--- a/index.html
+++ b/index.html
@@ -4,9 +4,22 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="css/style.css">
     <title>GIT-1</title>
 </head>
 <body>
-    
+    <header class="header">
+        <nav class="navbar">
+            <div class="navbar__content container">
+                <a href="" class="navbar__logo">Logo</a>
+                <ul class="navbar__list">
+                    <li><a href="#!" class="navbar__link">Home</a></li>
+                    <li><a href="#!" class="navbar__link">Home</a></li>
+                    <li><a href="#!" class="navbar__link">Home</a></li>
+                    <li><a href="#!" class="navbar__link">Home</a></li>
+                </ul>
+            </div>
+        </nav>
+    </header>
 </body>
 </html>
