header-intro added

--- a/index.html
+++ b/index.html
@@ -20,6 +20,10 @@
                 </ul>
             </div>
         </nav>
+        <div class="header__intro">
+            <h1 class="header-intro__title">Front-End</h1>
+            <p class="header-intro__text">Web Development</p>
+        </div>
     </header>
 </body>
 </html>
